Add SSH key generation

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,11 +1,13 @@
 CC=clang
 CFLAGS=-Wall -Wextra -std=c99 -O3
-LDFLAGS=-lm
 
-all: deciword.out
+all: deciword.out ssh-generate.out
 
 deciword.out: deciword.c
-	$(CC) $(LDFLAGS) $(CFLAGS) $< -o $@
+	$(CC) -lm $(CFLAGS) $< -o $@
+
+ssh-generate.out: ssh-generate.c
+	$(CC) -lssh $(CFLAGS) $< -o $@
 
 clean:
 	rm deciword.out
